--- a/src/pages/unit/Unit.css
+++ b/src/pages/unit/Unit.css
@@ -207,7 +207,6 @@
 }
 
 .unit__header-rule-icon {
-  top: 3px;
   position: relative;
   margin-right: 0.5rem;
 }
